styles.scss
@use "sass:math";

// Bootstrap colors
$white: #fff;
$body-color: #111;
$dark: #333;
$primary: #075ea2;
$success: #167d2e;
$danger: #dc3545;
$info: #097182;
$input-border-color: #969696;
$navbar-dark-color: rgba($white, 0.8);
$text-dark: #343a40;
$text-muted: rgb(104, 104, 104);
// Responsive texts
$enable-responsive-font-sizes: true;

// Viewports
$viewport-xs: 320px;
$viewport-sm: 576px;
$viewport-md: 768px;
$viewport-lg: 992px;
$viewport-xl: 1200px;
$viewport-xxl: 1320px;

$enable-cssgrid: true;

$score-letter-A: #018241;
$score-letter-B: #86bc30;
$score-letter-C: #ffcc01;
$score-letter-D: #f08000;
$score-letter-E: #e63f12;

@import "./node_modules/bootstrap/scss/bootstrap.scss";

body {
  @media screen and (max-width: $viewport-sm) {
    font-size: 14px !important;
    select,
    input,
    button,
    .form-control,
    .btn {
      font-size: 14px !important;
    }
  }
}

// Browser Hacks

_::-webkit-full-page-media,
_:future,
:root select {
  // https://browserstrangeness.bitbucket.io/css_hacks.html#safari
  -webkit-appearance: none;
  background-image: url("./public/img/chevron-down.png") !important;
  background-position: right 8px center;
  background-repeat: no-repeat;
  padding-right: 20px;
}

// Fixes a glitch in Chrome with input[number] making the arrows hardly
// actionnable when float numbers are rounded
input[type="number"].no-arrows {
  &::-webkit-outer-spin-button,
  &::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
  -moz-appearance:textfield;
}

// Force-show number <input/> inc-dec arrows to the left of the field
.incdec-arrows-left {
  display: flex;

  &[type="number"]::-webkit-inner-spin-button,
  &[type="number"]::-webkit-outer-spin-button {
    opacity: 1;
    margin-left: 4px;
  }
}

.feedback {
  &-valid {
    border-color: $success;
  }

  &-invalid {
    border-color: $danger;
  }
}

.sticky {
  &-sm-top,
  &-md-top,
  &-lg-top,
  &-xl-top {
    position: -webkit-sticky;
  }
}

// Rapidoc overriden styles
// @see https://rapidocweb.com/css-parts.html
rapi-doc::part(section-endpoint-head-path) {
  font-size: 14px;
}

// App styles

body {
  // Note: This is for header and footer to occupy the whole height of the
  // available viewport. Main content area is white background.
  background-color: $dark;
  min-width: 320px;
}

blockquote {
  q {
    font-family: Blanco, Georgia, serif;
    quotes: "“" "”" "‘" "’";
    &::before {
      content: open-quote;
    }
    &::after {
      content: close-quote;
    }
  }
}

.border{
  &-top-sm-0 {
    @media screen and (min-width: $viewport-sm) {
      border-top: 0 !important;
    }
  }
  &-start-sm {
    @media screen and (min-width: $viewport-sm) {
      border-left: 1px solid $border-color !important;
    }
  }
}


.bottomed-paragraphs {
  p:last-child {
    margin-bottom: 0;
  }
}

.inline-paragraphs {
  p {
    display: inline;
  }
}

.bg-primary-gradient {
  background: $primary;
  background: linear-gradient(15deg, #054a80, $primary);
}

.icon {
  position: relative;
}

.icon-snow {
  left: -5px;
  font-size: 8px;
  position: absolute;
  top: -2px;
}

.cursor {
  &-help {
    cursor: help;
  }

  &-pointer {
    cursor: pointer;
  }
}

.fs {
  &-7 {
    font-size: 0.85rem;
  }

  &-75 {
    font-size: 0.9rem;
  }

  &-unit {
    font-size: min(0.7em, 24px);
  }

  &-80p {
    font-size: 80%;
  }
}

.fw {
  &-500 {
    font-weight: 500;
  }
}

.height-auto {
  // This class is to be used to circumvent a bug with Rapidoc where it sets the height of
  // the component parent element to `height: 100vh` for no reason.
  height: auto !important;
}

.invert {
  filter: invert(1);
}

.link {
  &-external:not(.link-external-muted) {
    &::after {
      font-family: "icomoon" !important;
      content: "\e908";
      display: inline-block;
      text-indent: 2px;
      font-size: 0.9em;
      color: currentColor;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      vertical-align: text-top;
      line-height: 1;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }

  &-email {
    &::before {
      font-family: "icomoon" !important;
      content: "\f0e0";
      display: inline-block;
      text-indent: 2px;
      font-size: 0.9em;
      color: currentColor;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      vertical-align: baseline;
      line-height: 1;
      margin-right: 3px;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }
}

.no-outline {
  &:focus, &:active {
    outline: none;
    box-shadow: none;
  }
}

.no-scroll-chaining {
  // Avoid y-scroll chaining
  // @see https://ishadeed.com/article/prevent-scroll-chaining-overscroll-behavior/
  overscroll-behavior-y: contain;
  overflow-y: auto;
}

.overflow {
  &-x-hidden {
    overflow-x: hidden;
  }

  &-y-scroll {
    overflow-y: scroll;
  }
}

.stacked-card {
  > * {
    border-bottom: 0;
    border-radius: 0;
    margin-bottom: 0;
  }

  > :first-child {
    border-top-left-radius: $border-radius;
    border-top-right-radius: $border-radius;
  }

  > :last-child {
    border-bottom: 1px solid $border-color;
    border-bottom-left-radius: $border-radius;
    border-bottom-right-radius: $border-radius;
  }
}

.text-light-all {
  color: $white;
  a {
    color: $white;
  }
}

.w {
  &-33 {
    width: 33.333333%;
  }
}

.Abbr {
  font-weight: normal;
  cursor: help;
  border-bottom: 1px dashed $primary;
}
/* ... */

